# job-dispatch-service

./: Cargo.toml  README.md
api/: http-client.env.json  openapi.yaml  test.http
public/: order_drink.html
src/: job.rs  main.rs  worker.rs
src/queue/: in_memory.rs  json_file.rs  mod.rs
